--- a/YotYord/Object/Plist/StarShowPlist.plist
+++ b/YotYord/Object/Plist/StarShowPlist.plist
@@ -2,14 +2,95 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <array>
-    <string>อาทิตย์</string>
-    <string>จันทร์</string>
-    <string>อังคาร</string>
-    <string>พุธ</string>
-    <string>พฤหัสบดี</string>
-    <string>ศุกร์</string>
-    <string>เสาร์</string>
-    <string>ราหู</string>
-    <string>เกตุ</string>
+	<dict>
+		<key>name</key>
+		<string>อาทิตย์</string>
+		<key>weight</key>
+		<integer>1</integer>
+		<key>point</key>
+		<integer>0</integer>
+		<key>star</key>
+		<integer>1</integer>
+	</dict>
+	<dict>
+		<key>name</key>
+		<string>จันทร์</string>
+		<key>weight</key>
+		<integer>1</integer>
+		<key>point</key>
+		<integer>0</integer>
+		<key>star</key>
+		<integer>2</integer>
+	</dict>
+	<dict>
+		<key>name</key>
+		<string>อังคาร</string>
+		<key>weight</key>
+		<integer>1</integer>
+		<key>point</key>
+		<integer>0</integer>
+		<key>star</key>
+		<integer>3</integer>
+	</dict>
+	<dict>
+		<key>name</key>
+		<string>พุธ</string>
+		<key>weight</key>
+		<integer>1</integer>
+		<key>point</key>
+		<integer>0</integer>
+		<key>star</key>
+		<integer>4</integer>
+	</dict>
+	<dict>
+		<key>name</key>
+		<string>พฤหัสบดี</string>
+		<key>weight</key>
+		<integer>1</integer>
+		<key>point</key>
+		<integer>0</integer>
+		<key>star</key>
+		<integer>5</integer>
+	</dict>
+	<dict>
+		<key>name</key>
+		<string>ศุกร์</string>
+		<key>weight</key>
+		<integer>1</integer>
+		<key>point</key>
+		<integer>0</integer>
+		<key>star</key>
+		<integer>6</integer>
+	</dict>
+	<dict>
+		<key>name</key>
+		<string>เสาร์</string>
+		<key>weight</key>
+		<integer>1</integer>
+		<key>point</key>
+		<integer>0</integer>
+		<key>star</key>
+		<integer>7</integer>
+	</dict>
+	<dict>
+		<key>name</key>
+		<string>ราหู</string>
+		<key>weight</key>
+		<integer>1</integer>
+		<key>point</key>
+		<integer>0</integer>
+		<key>star</key>
+		<integer>8</integer>
+	</dict>
+	<dict>
+		<key>name</key>
+		<string>เกตุ</string>
+		<key>weight</key>
+		<integer>1</integer>
+		<key>point</key>
+		<integer>0</integer>
+		<key>star</key>
+		<integer>9</integer>
+	</dict>
 </array>
 </plist>
